Configuracion de localStorage seguro

--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@ng-bootstrap/ng-bootstrap": "^8.0.4",
     "@sweetalert2/theme-material-ui": "^4.0.5",
     "bootstrap": "^4.5.0",
+    "crypto-js": "^4.0.0",
     "rxjs": "~6.6.0",
+    "secure-web-storage": "^1.0.2",
     "sweetalert2": "^10.16.4",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -34,9 +36,10 @@
     "@angular-devkit/build-angular": "~0.1001.7",
     "@angular/cli": "~10.1.7",
     "@angular/compiler-cli": "~10.1.6",
-    "@types/node": "^12.11.1",
+    "@types/crypto-js": "^4.0.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.20.10",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
