--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@sweetalert2/theme-material-ui": "^4.0.5",
     "bootstrap": "^4.5.0",
     "crypto-js": "^4.0.0",
+    "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "secure-web-storage": "^1.0.2",
     "sweetalert2": "^10.16.4",
