--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "@sweetalert2/theme-material-ui": "^4.0.5",
     "bootstrap": "^4.5.0",
     "crypto-js": "^4.0.0",
+    "file-saver": "^2.0.5",
     "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "secure-web-storage": "^1.0.2",
     "sweetalert2": "^10.16.4",
     "tslib": "^2.0.0",
+    "xlsx": "^0.16.9",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
