--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~10.1.6",
     "@angular/platform-browser-dynamic": "~10.1.6",
     "@angular/router": "~10.1.6",
+    "@iplab/ngx-file-upload": "^3.1.3",
     "@ng-bootstrap/ng-bootstrap": "^8.0.4",
     "@sweetalert2/theme-material-ui": "^4.0.5",
     "bootstrap": "^4.5.0",
